# tennis-vision-analysis-alt

./: .gitignore  README.md  README_zh.md  main.py  pyproject.toml  requirements.txt
configs/: CONFIG_REFERENCE.md  README.md  court_14pts_weighted.yaml  court_keypoints_ultimate.yaml  main.yaml  main_shared.yaml  optimal.yaml  optimal_full.yaml  person_sorter_dataset.yaml
configs/ablation/: abl_global_only.yaml  abl_no_crops.yaml  abl_no_pose.yaml  abl_no_visual.yaml
configs/components/: cmp_ce_loss.yaml  cmp_focal_loss.yaml  cmp_frozen_backbone.yaml  cmp_no_merge.yaml  cmp_resnet_backbone.yaml
configs/hyperparams/: hp_depth12.yaml  hp_depth4.yaml  hp_embed256.yaml  hp_embed96.yaml  hp_vtokens32.yaml  hp_vtokens8.yaml
configs/single_frame/: sf_main.yaml
docs/: architecture.md  style_guide.md  training_list.txt
src/: README.md  audio_video_fusion.py  ball_tracker.py  config_legacy.py  court_detector.py  main.py  pose_tracker.py  test_person_detector.py  train_court_pipeline.py
src/demo/: README.md  app.py  inference.py  main.py  player.py  seq_len_sweep.py  timeline.py
src/pipeline/: README.md  corner_driven_refine_tool.py  debug_vision.py  generate_trajectory.py  offline_tennis_tracker.py  prepare_weighted_dataset.py  smart_extract_14pts.py  test_weighted_inference.py
src/tracknet/: ball_tracker_tracknet.py
src/training/: README.md  merge_hard_negatives.py  train_person_detector.py  yolo-train-legacy.py
src/utils/: README.md  action_annotator.py  add_court_to_pose.py  analyze_class_distribution.py  batch_eval_all.py  broadcast_detector.py  (+24 more)
(+26 files in other folders)
