[project]
name = "tennis-vision-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lapx>=0.9.4",
    "numpy>=2.4.6",
    "opencv-python>=5.0.0.93",
    "pillow>=12.3.0",
    "scenedetect>=0.7",
    "scipy>=1.17.1",
    "torch>=2.13.0",
    "transformers>=5.13.1",
    "ultralytics>=8.4.94",
]
